--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
+    "flow-bin": "^0.41.0",
     "react-scripts": "0.9.5",
     "storyshots": "^3.2.2"
   },
@@ -18,6 +19,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "flow": "flow"
   }
 }
